--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,7 @@
 name: 3DManeuverGear
 author: finnbon AKA Finn_Bueno_
 version: 1.3
+api-version: 1.13
 description: Swing across the skies using 3DMG!
 main: me.finnbon.maneuvergear.ManeuverGear
 
